--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
+  
   <body>
     <!-- header -->
     <header class="header">
@@ -28,6 +29,13 @@
           <a class="header-logo" href="./index.html"
             >WEB<span class="header-logo-span">Studio</span></a
           >
+          <button type="button" class="button-burger-menu">
+            <svg class="header-burger-menu" width="24" height="24">
+             <use href="./images/icons.svg#icon-btn_mobile_menu">
+
+             </use>
+          </svg>
+        </button>
           <ul class="class-menu">
             <li class="class-menu-item">
               <a class="class-menu-link current" href="./index.html">Studio</a>
@@ -59,16 +67,16 @@
 
     <!-- hero -->
 
-    <main>
+    <!-- <main>
       <section class="hero-section">
         <div class="container container-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
-      <!-- features -->
-      <section class="features">
+    <!-- features -->
+    <!-- <section class="features">
         <div class="container container-features">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="features-list">
@@ -122,10 +130,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- team -->
-      <section class="team">
+    <!-- team -->
+    <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -347,10 +355,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- portfolio -->
-      <section class="portfolio">
+    <!-- portfolio -->
+    <!-- <section class="portfolio">
         <div class="container container-portfolio">
           <h2 class="portfolio-section">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -476,10 +484,10 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-container">
         <div class="footer-content">
           <a href="./index.html" class="footer-logo"
@@ -489,9 +497,9 @@
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
-        </div>
+        </div> -->
 
-        <div class="footer-social">
+    <!-- <div class="footer-social">
           <p class="footer-social-title">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-item">
@@ -523,9 +531,9 @@
               </a>
             </li>
           </ul>
-        </div>
-        <!-- Subscribe -->
-        <div class="footer-subscribe-container">
+        </div> -->
+    <!-- Subscribe -->
+    <!-- <div class="footer-subscribe-container">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-subscribe-form">
             <label class="footer-subscribe-label">
@@ -545,17 +553,17 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- backdrop -->
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button class="modal-button-close" type="button">
           <svg class="button-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </button>
+        </button> -->
 
-        <p class="modal-title">Leave your contacts and we will call you back</p>
+    <!-- <p class="modal-title">Leave your contacts and we will call you back</p>
 
         <form>
           <div class="form-field">
@@ -635,6 +643,6 @@
           <button type="button" class="submit-btn">Send</button>
         </form>
       </div>
-    </div>
-  </body>
+    </div> -->
+  <!-- </body> -->
 </html>
