--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
           <a class="header-logo" href="./index.html"
             >WEB<span class="header-logo-span">Studio</span></a
           >
+
+          <button class="header-menu" type="button">
+            <svg class="header-menu-mobile" width="8" height="8">
+              <use href="./images/icons.svg#icon-btn_mobile_menu"></use>
+            </svg>
+          </button>
+
           <ul class="class-menu">
             <li class="class-menu-item">
               <a class="class-menu-link current" href="./index.html">Studio</a>
@@ -40,6 +47,7 @@
             </li>
           </ul>
         </nav>
+
         <address class="header-contacts">
           <ul class="header-contacts-list">
             <li class="header-contacts-item">
@@ -547,7 +555,7 @@
       </div>
     </footer>
     <!-- backdrop -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-button-close" type="button">
           <svg class="button-close" width="8" height="8">
