--- a/index.html
+++ b/index.html
@@ -65,6 +65,81 @@
       </div>
     </header>
 
+    <!-- burger menu -->
+
+    <div class="mobile-menu-container is-open">
+      <div class="mobile-menu">
+        <button type="button" class="btn-close-mob-menu">
+          <svg class="mob-menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-nav">
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-item">
+              <a class="mobile-nav-link blue" href="">Studio</a>
+            </li>
+            <li class="mobile-nav-item">
+              <a class="mobile-nav-link" href="">Portfolio</a>
+            </li>
+            <li class="mobile-nav-item">
+              <a class="mobile-nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="mobile-menu-address">
+          <ul class="mobile-addr-list">
+            <li class="monile-addr-item">
+              <a class="mobile-addr-link blue" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="monile-addr-item">
+              <a class="mobile-addr-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <!-- icons -->
+
+        <div class="mobile-social-media-container">
+          <ul class="mobile-social-media-list">
+            <li class="mobile-social-media-item">
+              <a href="#" class="mobile-social-media-link">
+                <svg class="mobile-social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-media-item">
+              <a href="#" class="mobile-social-media-link">
+                <svg class="mobile-social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-x"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-media-item">
+              <a href="#" class="mobile-social-media-link">
+                <svg class="mobile-social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-media-item">
+              <a href="#" class="mobile-social-media-link">
+                <svg class="mobile-social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <!-- hero -->
 
     <main>
