--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- burger menu -->
 
-    <div class="mobile-menu-container is-open">
+    <div class="mobile-menu-container">
       <div class="mobile-menu">
         <button type="button" class="btn-close-mob-menu">
           <svg class="mob-menu-close-icon" width="8" height="8">
