--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
       </div>
     </header>
 
-    <!-- burger menu -->
-
     <div class="mobile-menu-container">
       <div class="mobile-menu">
         <button type="button" class="btn-close-mob-menu">
@@ -211,12 +209,35 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img
-                src="./images/img-1-4.jpg"
-                width="264"
-                height="260"
-                alt="Mark Guerrero"
-              />
+              <picture>
+                <source
+                  media="(max-width:767px)"
+                  srcset="
+                    ./images/mobile/person-1-1x.jpg 1x,
+                    ./images/mobile/person-1-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768px)"
+                  srcset="
+                    ./images/tablet/person1-1x.jpg 1x,
+                    ./images/tablet/person1-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1158px)"
+                  srcset="
+                    ./images/desktop/person1-1x.jpg 1x,
+                    ./images/desktop/person1-2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/mobile/person-1-1x.jpg"
+                  width="264"
+                  height="260"
+                  alt="Mark Guerrero"
+                />
+              </picture>
               <div class="team-info">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-role">Product Designer</p>
@@ -265,12 +286,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/img-1-3.jpg"
-                width="264"
-                height="260"
-                alt="Tom Ford"
-              />
+              <picture>
+                <source
+                  media="(max-width:767px)"
+                  srcset="
+                    ./images/mobile/person2-1x.jpg 1x,
+                    ./images/mobile/person2-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768px)"
+                  srcset="
+                    ./images/tablet/person2-1x.jpg 1x,
+                    ./images/tablet/person2-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1158px)"
+                  srcset="
+                    ./images/desktop/person2-1x.jpg 1x,
+                    ./images/desktop/person2-2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/mobile/person2-1x.jpg"
+                  width="264"
+                  height="260"
+                  alt="Tom Ford"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-role">Frontend Developer</p>
@@ -319,12 +364,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/img-1-2.jpg"
-                width="264"
-                height="260"
-                alt="Camila Garcia"
-              />
+              <picture>
+                <source
+                  media="(max-width:767px)"
+                  srcset="
+                    ./images/mobile/person3-1x.jpg 1x,
+                    ./images/mobile/person3-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768px)"
+                  srcset="
+                    ./images/tablet/person3-1x.jpg 1x,
+                    ./images/tablet/person3-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1158px)"
+                  srcset="
+                    ./images/desktop/person3-1x.jpg 1x,
+                    ./images/desktop/person3-2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/mobile/person3-1x.jpg"
+                  width="264"
+                  height="260"
+                  alt="Camila Garcia"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-role">Marketing</p>
@@ -373,12 +442,36 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                src="./images/img-1-1.jpg"
-                width="264"
-                height="260"
-                alt="Daniel Wilson"
-              />
+              <picture>
+                <source
+                  media="(max-width:767px)"
+                  srcset="
+                    ./images/mobile/person4-1x.jpg 1x,
+                    ./images/mobile/person4-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:768px)"
+                  srcset="
+                    ./images/tablet/person4-1x.jpg 1x,
+                    ./images/tablet/person4-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width:1158px)"
+                  srcset="
+                    ./images/desktop/person4-1x.jpg 1x,
+                    ./images/desktop/person4-2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/mobile/person4-1x.jpg"
+                  width="264"
+                  height="260"
+                  alt="Daniel Wilson"
+                />
+              </picture>
+
               <div class="team-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-role">UI Designer</p>
@@ -437,12 +530,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/bankapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/bank-1x.jpg 1x,
+                      ./images/mobile/bank-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/bank1x.jpg  1x,
+                      ./images/tablet/bank-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/bank1x.jpg 1x,
+                      ./images/desktop/bank2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/mobile/bank-1x.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -457,12 +574,36 @@
 
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/cashlesspayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/cash-1x.jpg 1x,
+                      ./images/mobile/cash-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/cash-1x.jpg 1x,
+                      ./images/tablet/cash-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/cash1x.jpg 1x,
+                      ./images/desktop/cash2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/cash-1x.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -477,12 +618,37 @@
 
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/meditationapp.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/meditation-1x.jpg 1x,
+                      ./images/mobile/meditation-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/meditation1x.jpg 1x,
+                      ./images/tablet/meditation2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/meditation1x.jpg 1x,
+                      ./images/desktop/meditation2x.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/meditation-1x.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -497,12 +663,37 @@
 
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/taxi-1x.jpg 1x,
+                      ./images/mobile/taxi-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/taxi1x.jpg 1x,
+                      ./images/tablet/taxi2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/taxi1x.jpg 1x,
+                      ./images/desktop/taxi2x.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/taxi-1x"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -517,12 +708,37 @@
 
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/screenillustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/screen-1x.jpg 1x,
+                      ./images/mobile/screen-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/screen1x.jpg 1x,
+                      ./images/tablet/screen2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/screen1x.jpg 1x,
+                      ./images/desktop/screen2x.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/screen-1x.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -537,12 +753,37 @@
 
             <li class="portfolio-item">
               <div class="portfolio-block">
-                <img
-                  src="./images/onlinecourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(max-width: 757px)"
+                    srcset="
+                      ./images/mobile/courses-1x.jpg 1x,
+                      ./images/mobile/courses-2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 758px)"
+                    srcset="
+                      ./images/tablet/courses1x.jpg 1x,
+                      ./images/tablet/courses2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/desktop/courses1x.jpg 1x,
+                      ./images/desktop/courses2x.jpg 2x
+                    "
+                  />
+
+                  <img
+                    src="./images/courses-1x.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
